<resources>
    <string name="facebook_app_id">597616363744470</string>
    <string name="app_name">Quartets</string>
    <string name="recordes">Table of records</string>
    <string name="wellcome">Welcome</string>
    <string name="openGroup">Open new group</string>
    <string name="addPlayer">Add new player</string>
    <string name="remove">Remove</string>
    <string name="newGame">Start new Game</string>
    <string name="exit">Exit</string>
    <string name="startGame">Start Game</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="logIn">Log In</string>
    <string name="addNewCards">Add new cards</string>
    <string name="logOut">Log Out</string>
    <string name="chooseQuartets">Choose Series</string>
    <string name="add">Add</string>
    <string name="exitWarning">Are you sure you want to exit?</string>
    <string name="ShowMyCards">Show My Cards</string>
    <string name="changeLang">Change lang</string>
    <string name="LOCALE_IW">iw</string>
    <string name="LOCALE_ENGLISH">en</string>
    <string name="CreateUser">Creat User</string>
    <string name="back">Back</string>
    <string name="loading">Loading Component...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="OpenRoom">Open Room</string>
    <string name="roomName">Room Name</string>
    <string name="createRoom">Create Room</string>
    <string name="JoinToRoom">Join Room</string>
    <string name="EnterRoomName">Enter Room Name</string>
    <string name="Back">Back</string>
    <string name="repassword">Re-Password</string>
    <string name="send">send card</string>
    <string name="receive">receive card</string>
    <string name="choose">Choose</string>
    <string name="string_choose_file">Choose image</string>
    <string name="string_upload_image">Uploading series</string>
    <string name="string_view_image">View image</string>
    <string name="get_All_person">Get Persons</string>
    <string name="set_person">Set Persons</string>
    <string name="user_id">user id</string>
    <string name="user_age">user age</string>
    <string name="addPerson_dialog_title">add new person</string>
    <string name="addPerson_dialog_masge">insert person data</string>
    <string name="series">Category</string>
    <string name="updateCard">Update</string>
    <string name="update_Card_dialog_title">Update Card</string>
    <string name="update_Card_masage">insert card data</string>
    <string name="card_name">card name</string>
    <string name="change_image">Change image</string>
    <string name="Are_you_sure_delet_series">Are you sure you want to delete this series?</string>
    <string name="word_to_long">word to long</string>
    <string name="empty_field">there is empty field</string>
    <string name="number_cannot_be_uName">number cannot bee user name</string>
    <string name="delete_succsessfull">Delete Successfully</string>
    <string name="delete_failed">Delete Failed!</string>
    <string name="update_succesess">Update Successfully </string>
    <string name="update_failed">Update Failed</string>
    <string name="Select_Picture">Select Picture</string>
    <string name="dont_have_cards">you didnt upload any cards</string>
    <string name="Warning">Warning</string>
    <string name="Group_Not_Found">Group Not Found</string>
    <string name="back_Main_Menu">Go back to Main Menu?</string>
    <string name="score">Score</string>
    <string name="upload_image_success">Upload image success</string>
    <string name="upload_image_failed">Upload image failed</string>
    <string name="please_choose_image">Image not choosen</string>
    <string name="card1">card1</string>
    <string name="card2">card2</string>
    <string name="card3">card3</string>
    <string name="card4">card4</string>
    <string name="add_new_series">Create series</string>
    <string name="series_full">Series full</string>
    <string name="card_not_load">The cards not load</string>
    <string name="you_join_to_room">You join to room</string>
    <string name="you_didnt_join_to_room">join to room failed</string>
    <string name="refresh">Refresh</string>
    <string name="enter_categry_name">Enter new series</string>
    <string name="room_empty">There is no user in room</string>
    <string name="card_load">card load successfully</string>
    <string name="update_series">Update series</string>
    <string name="wait_for_admin_chose">Please wait while the admin chooses series for game</string>
    <string name="show_my_series">Show my series</string>
    <string name="no_internet">No internet connection try again later</string>
    <string name="must_permission">permission neccery</string>
    <string name="points">Points</string>
    <string name="high_scores">High scores</string>
    <string name="cannot_send_card">you cannot send card on your turn</string>
    <string name="game_over">Game over</string>
    <string name="win">Win!</string>
    <string name="Won">Won</string>
    <string name="no_one_win">Equals result</string>
    <string name="move_to_next_turn">Next turn</string>
    <string name="you_turn">You turn</string>
    <string name="choose_at_least">Choose at least 5 series</string>
    <string name="room_name">Room name</string>
    <string name="open_room_dialog_title">@string/OpenRoom</string>
    <string name="open_room_dialog_message">Enter room name</string>
    <string name="please_wait">Please wait</string>
    <string name="waiting_for_players">Waiting for other players...</string>
    <string name="room_name_in_use">Room name already in use</string>
    <string name="connection_error">Error occurred - check internet connection</string>
    <string name="sereis_uplaod_success">Series upload successfully!</string>
    <string name="series_uplaod_failed">Series upload failed!</string>
    <string name="failed_to_set_game_inactive">failed to set game inactive</string>
    <string name="room_close">close the room</string>
    <string name="no_recorde_toShow">There is no record to show</string>
    <string name="update_finis_sereis_failed">Update finish series failed</string>
    <string name="card_load_failed">Card load failed</string>
    <string name="get_winner_failde">There was problem geting winner name</string>
    <string name="Cant_set_game_Over">Cant set game Over</string>
    <string name="new_high_score">You got new high score!</string>
    <string name="low_score">You have been a higher score..</string>
    <string name="set_deck_over_failed">There was problem on set Deck is over</string>
    <string name="cant_take_card">You cannot take card wait to your turn</string>
    <string name="wait_too_your_turn">Please wait to your turn</string>
    <string name="sereis_comlete">Series Complete!</string>
    <string name="send_card_failed">Card snd failed send</string>
    <string name="take_card_failed">Take one card failed</string>
    <string name="move_next_player_failed">move To Next Player failed</string>
    <string name="check_if_my_turn_failed">check if is my turn failed</string>
    <string name="new_card_recived">New Card recived</string>
    <string name="card_send">Card send</string>
    <string name="player_disconected">Someone is offline</string>
    <string name="refresh_failed">Refresh failed</string>
    <string name="invalid_user_login">invalid user ! check user name and password</string>
    <string name="user_sign_up_success">sign up successfully</string>
    <string name="user_sign_up_failed">sign up failed</string>
    <string name="user_id_not_known">User id not exist</string>
    <string name="push_hold">push and hold for more option</string>
    <string name="password_no_match">Password no match</string>
    <string name="finish_series_cnt">finish series:</string>
    <string name="you">you</string>
    <string name="Active_player">Active player:</string>
    <string name="take_card">Take a card from the deck</string>
    <string name="upload_just_image">Please make sure you only select images</string>
    <string name="getSeriesNamesFailde">Get series names failed</string>
    <string name="serverNotRespond">Server Not Respond</string>
    <string name="noe_complete_sereis">You have not completed any series</string>
    <string name="game_equals">Equal result</string>
    <string name="my_series">My series</string>
    <string name="select_playe_cnt">Select number of players</string>
    <string name="empty_room_name">room without name is forbid</string>
    <string name="pick_image_intent_text">Chose image</string>
    <string name="Instruction">Instruction</string>
    <string name="deck_over">Deck over</string>
    <string name="instructions_pop_up">in your turn you need ask physically one of the players about specific card </string>
    <string name="do_not_show_again">please do not show again.</string>
    <string name="attention">Attention</string>



    <string-array name="card_click_menu">
        <item>send card</item>
    </string-array>

    <string-array name="my_card">
        <item>Delete series</item>
        <item>Edit series</item>
    </string-array>

    <string-array name="player_count">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


</resources>
