<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/rsz_background_menu_resize"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_file"
        android:background="#FFEB3B"
        android:id="@+id/buttonChoose" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:id="@+id/imageView" />




    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_upload_image"
        android:background="#8BC34A"
        android:id="@+id/buttonUpload" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/newCategory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/holo_blue_bright"
            android:hint="@string/category"
            android:inputType="text"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/azure" />

        <EditText
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/card1"
            android:inputType="text"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@drawable/edit_text" />

        <EditText
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/card2"
            android:inputType="text"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@drawable/edit_text" />

        <EditText
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/card3"
            android:inputType="text"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@drawable/edit_text"/>

        <EditText
            android:id="@+id/card4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/card4"
            android:inputType="text"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@drawable/edit_text"
        />

        <Button
            android:onClick="addThisCard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_card"
            android:background="@color/azure"
            android:id="@+id/buttonUploadSeries" />
    </LinearLayout>


</LinearLayout>