<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/rsz_background_menu_resize"
    android:weightSum="100">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="75"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="45"
            android:weightSum="100">

            <EditText
                android:layout_weight="50"
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/userName"
                android:inputType="text"
                android:gravity="center"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/user"
                android:drawableLeft="@drawable/user"
                />

            <EditText
                android:layout_weight="50"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:gravity="center"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/user"
                android:drawableLeft="@drawable/user"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="30"
            android:weightSum="100">
            <Button
                android:layout_weight="50"
                android:background="@drawable/enter"
                android:text="@string/logIn"
                android:onClick="logIn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/logInBtn"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <Button
                android:layout_weight="50"
                android:background="@drawable/sing_up"
                android:text="@string/signUp"
                android:onClick="SignUp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/SignUpBtn"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="10"
        android:weightSum="10">

        <com.facebook.login.widget.LoginButton
            android:layout_weight="10"
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/facbookLogin"
            android:layout_gravity="center_horizontal"
            facebook:com_facebook_confirm_logout="false"
            facebook:com_facebook_tooltip_mode="never_display" />

    </LinearLayout>


</LinearLayout>